# valuation

./: .gitignore  .rustfmt.toml  Cargo.toml  justfile
.github/: dependabot.yml
.github/workflows/: check.yml  test.yml
docs/: book.toml
docs/adr/: 001-modular-crate-architecture.md
modules/documents/: Cargo.toml
modules/documents/src/: lib.rs
modules/documents/src/calculator/: filters.rs  mod.rs
modules/documents/src/home/: mod.rs
modules/documents/templates/calculator/: index.html  table.html
modules/documents/templates/home/: index.html
modules/pages/: Cargo.toml
modules/pages/src/: lib.rs
modules/pages/src/calculator/: mod.rs
modules/pages/templates/calculator/: index.html
modules/server/: Cargo.toml
modules/server/src/: main.rs
modules/types/: Cargo.toml
src/: main.rs
templates/: index.html
