[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
documents = {path = "../documents" }
async-stream.workspace = true
axum.workspace = true
datastar.workspace = true
futures.workspace = true
maud.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"